--- a/mediapipe/modules/hand_landmark/BUILD
+++ b/mediapipe/modules/hand_landmark/BUILD
@@ -42,7 +42,7 @@ mediapipe_simple_subgraph(
         "//mediapipe/calculators/util:landmark_letterbox_removal_calculator",
         "//mediapipe/calculators/util:landmark_projection_calculator",
         "//mediapipe/calculators/util:thresholding_calculator",
-        "//mediapipe/calculators/custom:interaction_model_calculator"
+ #       "//mediapipe/calculators/custom:interaction_model_calculator"
     ],
 )
 
@@ -61,7 +61,7 @@ mediapipe_simple_subgraph(
         "//mediapipe/calculators/util:landmark_letterbox_removal_calculator",
         "//mediapipe/calculators/util:landmark_projection_calculator",
         "//mediapipe/calculators/util:thresholding_calculator",
-         "//mediapipe/calculators/custom:interaction_model_calculator"
+  #       "//mediapipe/calculators/custom:interaction_model_calculator"
     ],
 )
 
