Implemented and verified handedness in calculator

--- a/mediapipe/calculators/custom/BUILD
+++ b/mediapipe/calculators/custom/BUILD
@@ -41,6 +41,7 @@ cc_library(
         "//mediapipe/framework/port:status",
         "//mediapipe/framework/formats:rect_cc_proto",
         "//mediapipe/framework/port:ret_check",
+"//mediapipe/framework/formats:classification_cc_proto",
 
     ],
     alwayslink = 1,
