--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 core filter=lfs diff=lfs merge=lfs -text
+mediapipe/modules/pose_landmark/pose_landmark_heavy.tflite filter=lfs diff=lfs merge=lfs -text
